<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_white"
    android:layoutAnimation="@anim/layout_from_bottom_login"
    tools:context=".ui.LoginActivity"
    tools:layoutAnimation="@null">

    <com.hjq.shape.view.imageView.roundedimageview.RoundedImageView
        android:id="@+id/iv_img"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/x300"
        android:layout_marginTop="@dimen/y120"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/ml_ic_wx"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:round_corner_radius="@dimen/x36" />

    <!--style="@style/bg_style"-->
    <TextView
        android:id="@+id/tv_wx_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:includeFontPadding="false"
        android:text="@string/ml_str_wx_login"
        android:textColor="@color/cl_999999"
        android:textSize="@dimen/x45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_img" />

    <com.hjq.shape.view.ShapeTextView
        android:id="@+id/tv_wx_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/x135"
        android:layout_marginTop="@dimen/y60"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/ml_str_wx_smart_login"
        android:textColor="@color/cl_white"
        android:textSize="@dimen/x50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wx_info"
        app:layout_constraintWidth_percent="0.9"
        app:shape_radius="@dimen/x68"
        app:shape_solidColor="@color/cl_1692DB" />

    <TextView
        android:id="@+id/tv_wx_agree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y50"
        android:includeFontPadding="false"
        android:lineSpacingExtra="@dimen/x5"
        android:padding="@dimen/x10"
        android:text="@string/ml_str_zhidetui_info"
        android:textColor="@color/cl_999999"
        android:textSize="@dimen/x40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wx_login"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/tv_login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y100"
        android:includeFontPadding="false"
        android:text="@string/ml_str_login_info"
        android:textColor="@color/cl_999999"
        android:textSize="@dimen/x45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_one_click_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y60"
        android:includeFontPadding="false"
        android:text="@string/ml_str_one_click_login"
        android:textColor="@color/cl_999999"
        android:textSize="@dimen/x50"
        app:layout_constraintBottom_toTopOf="@id/tv_login_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_login_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y60"
        android:includeFontPadding="false"
        android:text="@string/ml_str_login_type"
        android:textColor="@color/cl_999999"
        android:textSize="@dimen/x45"
        app:layout_constraintBottom_toTopOf="@id/tv_one_click_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/line_left"
        android:layout_width="0dp"
        android:layout_height="@dimen/x1"
        android:layout_marginRight="@dimen/x20"
        android:background="@color/cl_aaa"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_type"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/holder_left"
        app:layout_constraintRight_toLeftOf="@id/tv_login_type"
        app:layout_constraintTop_toTopOf="@id/tv_login_type" />

    <View
        android:id="@+id/holder_left"
        android:layout_width="0dp"
        android:layout_height="@dimen/x1"
        app:layout_constraintBottom_toBottomOf="@id/line_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/line_left"
        app:layout_constraintTop_toTopOf="@id/line_left"
        app:layout_constraintWidth_percent="0.05" />

    <View
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="@dimen/x1"
        android:layout_marginLeft="@dimen/x20"
        android:background="@color/cl_aaa"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_type"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tv_login_type"
        app:layout_constraintRight_toLeftOf="@id/holder_right"
        app:layout_constraintTop_toTopOf="@id/tv_login_type" />

    <View
        android:id="@+id/holder_right"
        android:layout_width="0dp"
        android:layout_height="@dimen/x1"
        app:layout_constraintBottom_toBottomOf="@id/line_right"
        app:layout_constraintLeft_toRightOf="@id/line_right"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_right"
        app:layout_constraintWidth_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>
